State what the binding is
The README documents a tree this repository does not have. It describes `UDTs`,
`UDFs` and `utils` folders, a `MeosDatatype<T>` base class, `PeriodUDT`,
`UDTRegistrator`, `UDFRegistrator`, `PeriodUDFRegistrator`, an
`org.mobiltydb.Examples` package and an AIS example — none of which exist. `src/main`
holds one class, `MeosMemory`. It also states Spark 3.4.0 and Java 17 against the
live Spark 3.5.1 and Java 21, prints `cmake -D MEOS=ON..` without `-DALL=ON`, and
its Unit Test section says the tests are disabled in the build configuration while
CI runs them on every push.

It now states the binding as it is: a Spark SQL surface GENERATED from the MEOS
catalog, with the chain that derives it, the one-command refresh, how to register
and call the surface, what the suite proves, and the file list. The requirement
that `libmeos` be built with `-DALL=ON` against the same commit as the jar is
stated with its consequence, since JNR-FFI resolves lazily and a narrower library
fails at the call rather than at load.

Every name in the examples is read from `GeneratedSurfaceTest`, which executes
them: `registerAll`, `numInstants`, `atTime`, `eIntersects`,
`nearestApproachDistance`, `eDwithinPairs` with its `explode` shape, `tint_in`,
`tint_out`, `temporal_num_instants`, `tnumber_twavg`. The session example uses the
`local[1]` master the suite uses rather than a wider one nothing here has
exercised. The ULB, OGC and logo matter is unchanged.